@@ -1,0 +1,3 @@
+require 'selenium/webdriver/support/event_firing_bridge'
+require 'selenium/webdriver/support/abstract_event_listener'
+require 'selenium/webdriver/support/block_event_listener'
